updated build section in README